Closed Bug 1633204 Opened 5 years ago Closed 5 years ago

Crash in [@ IPCError-browser | RecvCreateBrowsingContext Parent is not in the given group]

Categories

(Core :: DOM: Content Processes, defect, P2)

Desktop
All
defect

Tracking

()

VERIFIED FIXED
mozilla77
Fission Milestone M5b
Tracking Status
firefox-esr68 --- unaffected
firefox75 --- unaffected
firefox76 --- unaffected
firefox77 blocking verified
firefox78 --- verified

People

(Reporter: pascalc, Assigned: nika)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-1e806b21-7b43-4a30-ad7f-d09030200425.

Top 10 frames of crashing thread:

0 xul.dll static js::ObjectGroup::lazySingletonGroup js/src/vm/ObjectGroup.cpp:648
1  @0x2bac172efff 
2 xul.dll XPCWrappedNativeProto::Init js/xpconnect/src/XPCWrappedNativeProto.cpp:56
3 xul.dll static XPCWrappedNativeProto::GetNewOrUsed js/xpconnect/src/XPCWrappedNativeProto.cpp:121
4 xul.dll static XPCWrappedNative::GetNewOrUsed js/xpconnect/src/XPCWrappedNative.cpp:405
5 xul.dll static XPCConvert::NativeData2JS js/xpconnect/src/XPCConvert.cpp:368
6 xul.dll nsXPCWrappedJS::CallMethod js/xpconnect/src/XPCWrappedJSClass.cpp:916
7 xul.dll PrepareAndDispatch xpcom/reflect/xptcall/md/win32/xptcstubs_x86_64.cpp:181
8 xul.dll SharedStub 
9 xul.dll nsDocShell::InternalLoad docshell/base/nsDocShell.cpp:8808

New crash spike in Nightly starting with build 20200425094923
Changelog: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=db2e1d780268ab0a7dca1ea1ca81febcb33e926e&tochange=d8a8178627c4fab05f1eb46ee40f55db207c7c18

Component: General → DOM: Content Processes
Flags: needinfo?(nika)
Regressed by: 1580565
Has Regression Range: --- → yes
Assignee: nobody → nika
Fission Milestone: --- → M5b
Flags: needinfo?(nika)
Priority: -- → P2
Pushed by nlayzell@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/80fed0cf581c Live WindowContexts should keep BrowsingContextGroup alive, r=farre
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
Regressions: 1634215

Considering the "regression" tag, this bug fell in our bug investigation list so I will be trying to address it and move it forward in its lifecycle.

It appears that this crash occurred exclusively on v77.0a1, more exactly only on nightly builds released between 2020-04-25 and 2020-04-29. Also, it has been fixed in 29th of April so it had 6 days to bake. If we are to check the reports for new crashes with the same signature, there is no crash that happened on any build released after 2020-03-4-29 (the fixing date).

This considered and the fact that it does not have any kind of steps to reproduce, I confidently set this bug verified based on the crash reports.

Status: RESOLVED → VERIFIED
Has STR: --- → no
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: