Bug 1633204 - Live WindowContexts should keep BrowsingContextGroup alive, r=farre

Differential Revision: https://phabricator.services.mozilla.com/D72893